# chippie

./: Cargo.toml  README.md  cpu.rs  custom.ch8  main.rs
crates/chippie-emulator/: Cargo.toml
crates/chippie-emulator/src/: constants.rs  cpu.rs  lib.rs  ram.rs  registers.rs  rombuffer.rs
crates/chippie-gui/: Cargo.toml
crates/chippie-gui/src/: constants.rs  lib.rs  widgets.rs
src/: .main.rs.swp  constants.rs  cpu.rs  instruction.rs  lib.rs  main.rs  ram.rs  registers.rs  rombuffer.rs  stack.rs
